--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_SERVER_URL = http://localhost:5000
+REACT_APP_SERVER_URL = https://api-phongtro-pbru.onrender.com
 REACT_APP_LIMIT_POSTS = 5
 REACT_APP_CLOUD_NAME = dluanqwnn
 REACT_APP_UPLOAD_ASSETS_NAME = klwmkpyl
